--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h2 {
   vertical-align: top;
 
   width: 240px;
-  
+
 }
 
 .main-navigation a {
@@ -441,15 +441,22 @@ h2 {
   background-position: -10px -355px;
 }
 
-.label-date:hover::after {
-  left:430px;
+.calendar-pic:hover {
   background-position: -10px -397px;
 }
 
-.label-date:active::after {
-  left:430px;
+.calendar-pic:active {
   background-position: -10px -439px;
 }
+/*.label-date:hover::after {*/
+  /*left:430px;*/
+  /*background-position: -10px -397px;*/
+/*}*/
+
+/*.label-date:active::after {*/
+  /*left:430px;*/
+  /*background-position: -10px -439px;*/
+/*}*/
 
 .index-form .label-date {
   position: relative;
@@ -468,14 +475,18 @@ h2 {
   margin-right: 17px;
 }
 
+/*.index-amount{*/
+  /*padding-right: 2px;*/
+/*}*/
+
 .index-amount-adult {
   float: left;
-  width: 230px;
+  width: 223px;
 }
 
 .index-amount-child {
   float: right;
-  width: 180px;
+  width: 179px;
 }
 
 .label-amount {
@@ -491,96 +502,146 @@ h2 {
   text-transform: uppercase;
 }
 
-.label-adult::before {
-  content: "-";
-  position: absolute;
+/*.adult-minus {*/
+  /*position: absolute;*/
 
-  z-index: 2;
+  /*z-index: 2;*/
 
-  top: -15px;
-  left: 125px;
-  font-weight: bold;
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 40px;
-  font-family: 'PT Sans', "Arial", sans-serif;
-  color: rgba(169, 169, 169, 1);
-  text-transform: uppercase;
+  /*top: -15px;*/
+  /*left: 125px;*/
+  /*font-weight: bold;*/
+  /*font-size: 40px;*/
+  /*font-weight: bold;*/
+  /*line-height: 40px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+/*.adult-plus {*/
+  /*position: absolute;*/
+
+  /*z-index: 2;*/
+
+  /*top: -3px;*/
+  /*left: 180px;*/
+  /*font-weight: bold;*/
+  /*font-size: 30px;*/
+  /*font-weight: bold;*/
+  /*line-height: 30px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+/*.label-adult::before {*/
+  /*content: "-";*/
+  /*position: absolute;*/
+
+  /*z-index: 2;*/
+
+  /*top: -15px;*/
+  /*left: 125px;*/
+  /*font-weight: bold;*/
+  /*font-size: 40px;*/
+  /*font-weight: bold;*/
+  /*line-height: 40px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+/*.pic:hover::before  {*/
+  /*color: rgba(0, 0, 0, 1);*/
+/*}*/
+
+/*.pic:active::before  {*/
+  /*color: rgba(129, 179, 210);*/
+/*}*/
+
+/*.pic:hover::after  {*/
+  /*color: rgba(0, 0, 0, 1);*/
+/*}*/
+
+/*.pic:active::after  {*/
+  /*color: rgba(129, 179, 210);*/
+/*}*/
+
+/*.label-adult::after {*/
+  /*content: "+";*/
+  /*position: absolute;*/
+
+  /*z-index: 2;*/
+
+  /*top: -7px;*/
+  /*left: 200px;*/
+  /*font-weight: bold;*/
+  /*font-size: 30px;*/
+  /*font-weight: bold;*/
+  /*line-height: 30px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+/*.label-child::before {*/
+  /*content: "-";*/
+  /*position: absolute;*/
+
+  /*z-index: 2;*/
+
+  /*top: -15px;*/
+  /*left: 77px;*/
+  /*font-weight: bold;*/
+  /*font-size: 40px;*/
+  /*font-weight: bold;*/
+  /*line-height: 40px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+/*.label-child::after {*/
+  /*content: "+";*/
+  /*position: absolute;*/
+
+  /*z-index: 2;*/
+
+  /*top: -7px;*/
+  /*left: 150px;*/
+  /*font-weight: bold;*/
+  /*font-size: 30px;*/
+  /*font-weight: bold;*/
+  /*line-height: 30px;*/
+  /*font-family: 'PT Sans', "Arial", sans-serif;*/
+  /*color: rgba(169, 169, 169, 1);*/
+  /*text-transform: uppercase;*/
+/*}*/
+
+.index-amount-label-left {
+  float: left;
 }
 
-.pic:hover::before  {
-  color: rgba(0, 0, 0, 1);
-}
+.div-input {
+  float: right;
+  margin: 0;
+  padding: 0;
 
-.pic:active::before  {
-  color: rgba(129, 179, 210);
-}
+  list-style: none;
 
-.pic:hover::after  {
-  color: rgba(0, 0, 0, 1);
-}
-
-.pic:active::after  {
-  color: rgba(129, 179, 210);
-}
-
-.label-adult::after {
-  content: "+";
-  position: absolute;
-
-  z-index: 2;
-
-  top: -7px;
-  left: 200px;
-  font-weight: bold;
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 30px;
-  font-family: 'PT Sans', "Arial", sans-serif;
-  color: rgba(169, 169, 169, 1);
-  text-transform: uppercase;
-}
-
-.label-child::before {
-  content: "-";
-  position: absolute;
-
-  z-index: 2;
-
-  top: -15px;
-  left: 77px;
-  font-weight: bold;
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 40px;
-  font-family: 'PT Sans', "Arial", sans-serif;
-  color: rgba(169, 169, 169, 1);
-  text-transform: uppercase;
-}
-
-.label-child::after {
-  content: "+";
-  position: absolute;
-
-  z-index: 2;
-
-  top: -7px;
-  left: 150px;
-  font-weight: bold;
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 30px;
-  font-family: 'PT Sans', "Arial", sans-serif;
-  color: rgba(169, 169, 169, 1);
-  text-transform: uppercase;
+  font-size: 0;
 }
 
 .input-amount {
-  width:  65px;
-  padding-left: 54px;
-  padding-bottom: 6px;
-  padding-top: 6px;
+  display: inline-block;
+
+  width:  37px;
+  min-height: 36px;
+
   border: none;
+
+  text-align: center;
+  vertical-align: top;
 
   font-size: 14px;
   font-weight: bold;
@@ -592,13 +653,73 @@ h2 {
   background-color: #f2f2f2;
 }
 
-.adult {
-  margin-left: 21px;
+.plus {
+  display: inline-block;
+
+  width:  37px;
+  min-height: 38px;
+  border: none;
+
+
+
+  text-align: center;
+  vertical-align: top;
+
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 30px;
+  font-family: 'PT Sans', "Arial", sans-serif;
+  color: rgba(169, 169, 169, 1);
+  text-transform: uppercase;
+
+  background-color: #f2f2f2;
 }
 
-.child {
-  margin-left: 5px;
+.plus:hover {
+  color: rgba(0, 0, 0, 1);
 }
+
+.plus:active {
+  color: rgba(129, 179, 210, 1);
+}
+
+.minus {
+  display: inline-block;
+
+  width:  37px;
+  min-height: 38px;
+
+  border: none;
+
+  text-align: center;
+  vertical-align: top;
+
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 30px;
+  font-family: 'PT Sans', "Arial", sans-serif;
+  color: rgba(169, 169, 169, 1);
+  text-transform: uppercase;
+
+  background-color: #f2f2f2;
+}
+
+
+.minus:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
+.minus:active {
+  color: rgba(129, 179, 210, 1);
+}
+
+/*.adult {*/
+  /*margin-left: 21px;*/
+/*}*/
+
+/*.child {*/
+  /*margin-left: 5px;*/
+/*}*/
 
 .modal-btn {
   width: 100%;
@@ -724,7 +845,6 @@ h2 {
   padding-left: 102px;
 
   text-align: left;
-  background-color: chocolate;
 }
 
 .logo-image {
