--- a/css/style.css
+++ b/css/style.css
@@ -67,17 +67,15 @@ h2 {
 
   width: 240px;
 
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .main-navigation a {
-  display: block;
+  /*display: block;*/
 
   color: #000000;
   text-decoration: none;
-
-  padding-top: 15px;
-  padding-bottom: 15px;
-
 }
 
 .main-navigation a:hover {
@@ -369,7 +367,7 @@ h2 {
   margin-left: 316px;
   background-color: #ffffff;
   z-index: 1;
-  animation: bounce 1.5s;
+  animation: bounce 0.9s;
 }
 
 .index-form {
@@ -377,7 +375,7 @@ h2 {
 }
 
 .index-form .input-date {
-  width: 315px;
+  width: 314px;
   padding-bottom: 6px;
   padding-top: 6px;
   padding-left: 6px;
@@ -387,13 +385,13 @@ h2 {
 
   font-size: 14px;
   font-weight: bold;
-  line-height: 26px;
+  /*line-height: 26px;*/
   font-family: 'PT Sans', "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 
   background-color: #f2f2f2;
-
+  outline: #f2f2f2 solid 3px;
 }
 
 .index-form .input-date:hover {
