--- a/css/style.css
+++ b/css/style.css
@@ -1057,7 +1057,8 @@ h2 {
   margin: 0;
 
   color: inherit;
-  font: inherit;
+  font-family: inherit;
+  font-size: inherit;
 
   background: none;
   border: none;
