--- a/css/style.css
+++ b/css/style.css
@@ -478,19 +478,24 @@ h2 {
   margin-right: 17px;
 }
 
-/*.index-amount{*/
-  /*padding-right: 2px;*/
+.index-amount{
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
+  font-size: 0;
+}
+
+/*.index-amount-adult {*/
+    /*float: left;*/
+    /*widt: 220px;*/
 /*}*/
 
-.index-amount-adult {
-  float: left;
-  width: 220px;
-}
-
-.index-amount-child {
-  float: right;
-  width: 179px;
-}
+/*.index-amount-child {*/
+  /*float: right;*/
+  /*width: 179px;*/
+/*}*/
 
 .label-amount {
   position: relative;
@@ -621,18 +626,35 @@ h2 {
   /*text-transform: uppercase;*/
 /*}*/
 
-.index-amount-label-left {
-  float: left;
-}
+
+/*.index-amount-label-child {*/
+  /*display: inline-block;*/
+
+  /*vertical-align: middle;*/
+/*}*/
 
 .div-input {
-  float: right;
+  /*float: right;*/
+  display: inline-block;
   margin: 0;
   padding: 0;
 
   list-style: none;
 
   font-size: 0;
+}
+
+
+.index-amount-label-adult {
+  margin-right: 22px;
+}
+
+.div-input-adult {
+  margin-right: 60px;
+}
+
+.index-amount-label-child {
+  margin-right: 10px;
 }
 
 .input-amount {
@@ -666,7 +688,7 @@ h2 {
 
 
   text-align: center;
-  vertical-align: top;
+  vertical-align: middle;
 
   font-size: 30px;
   font-weight: bold;
@@ -695,7 +717,7 @@ h2 {
   border: none;
 
   text-align: center;
-  vertical-align: top;
+  vertical-align: middle;
 
   font-size: 30px;
   font-weight: bold;
@@ -755,7 +777,7 @@ h2 {
 }
 
 .footer {
-  min-height: 120px;
+  height: 120px;
 
   font-size: 0;
 }
@@ -781,19 +803,21 @@ h2 {
   font-weight: bold;
   line-height: 26px;
 
-  padding-top: 47px;
-  padding-bottom: 47px;
+  padding-top: 48px;
+  padding-bottom: 48px;
   text-align: center;
+  vertical-align: middle;
 }
 
 .footer-social {
   width: 400px;
   font-size: 16px;
 
-  padding-top: 32px;
+  padding-top: 34px;
   padding-bottom: 33px;
 
   text-align: center;
+
 }
 
 .social-btn {
@@ -836,23 +860,18 @@ h2 {
 }
 
 .footer-copyright {
-  /*width: 400px;*/
-
-  width: 298px;
+  width: 400px;
 
   font-size: 14px;
   line-height: 26px;
 
-  padding-top: 47px;
-  padding-bottom: 47px;
-  padding-left: 102px;
-
-  text-align: left;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .logo-image {
   position: relative;
-  padding-right: 200px;
+
   margin-left: 8px;
   color: #000000;
   text-decoration: none;
@@ -860,10 +879,10 @@ h2 {
 
 .logo-image::after {
   content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: inline-block;
+
+  vertical-align: middle;
+  text-align: center;
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
   width: 130px;
@@ -886,6 +905,10 @@ h2 {
 @keyframes bounce {
   0%   {
     transform: translateY(-100px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
   }
   70%  {
     transform: translateY(30px);
