--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,9 @@ h2 {
   font-size: 0;
 }
 
+.div-input-shadow {
+  box-shadow: 0 0 0 3px #f2f2f2;
+}
 
 .index-amount-label-adult {
   width: 105px;
@@ -491,7 +494,8 @@ h2 {
 .div-input-adult {
   width: 114px;
   margin-right: 63px;
-  outline: #f2f2f2 solid 3px;
+
+  background-color: #f2f2f2;
 }
 
 .index-amount-label-child {
@@ -501,7 +505,8 @@ h2 {
 
 .div-input-child {
   width: 114px;
-  outline: #f2f2f2 solid 3px;
+
+  background-color: #f2f2f2;
 }
 
 .input-amount {
@@ -528,7 +533,7 @@ h2 {
 .plus {
   display: inline-block;
 
-  width:  38px;
+  width:  37px;
   min-height: 38px;
   border: none;
 
@@ -556,7 +561,7 @@ h2 {
 .minus {
   display: inline-block;
 
-  width:  38px;
+  width:  37px;
   min-height: 38px;
 
   border: none;
