--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ h2 {
 
 .info-main {
   min-height: 256px;
-  background-color: chocolate;
+  background-color: brown;
   background-image: url("../img/index-city.jpg");
   background-repeat: no-repeat;
   background-position: 400px 0;
@@ -284,7 +284,7 @@ h2 {
 
 .attractions-main {
   min-height: 256px;
-  background-color: chocolate;
+  background-color: brown;
   background-image: url("../img/index-devils-bridge.jpg");
   background-repeat: no-repeat;
   background-size: 800px;
@@ -614,7 +614,7 @@ h2 {
 }
 
 .geolocation {
-  background-color: mediumpurple;
+  background-color: beige;
 }
 
 .footer {
@@ -1154,7 +1154,6 @@ a.arrow {
   margin-top: 30px;
   margin-bottom: 30px;
   margin-right: 30px;
-  background-color: chocolate;
 }
 
 .hotel-info {
