На финальную проверку

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   line-height: 24px;
   font-weight: normal;
   color: #000000;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   background-color: #f2f2f2;
 }
@@ -32,9 +32,9 @@ h2 {
 }
 
 .wrapper {
-	width: 1200px;
+  width: 1200px;
   margin: 0 auto;
-	box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
+  box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
   background-color: #ffffff;
 }
 
@@ -88,11 +88,11 @@ h2 {
 }
 
 .nav-li-left {
-	text-align: left;
+  text-align: left;
 }
 
 .main-navigation-left li:first-child {
-	padding-left: 72px;
+  padding-left: 72px;
 }
 
 .index-logo {
@@ -107,11 +107,15 @@ h2 {
 }
 
 .nav-li-right {
-	text-align: right;
+  text-align: right;
+}
+
+.nav-li-right-first {
+  padding-right: 2px;
 }
 
 .main-navigation-right li:last-child {
-	padding-right: 72px;
+  padding-right: 72px;
 }
 
 .logo-link {
@@ -126,24 +130,24 @@ h2 {
   background-image: url("../img/index-mountain-bottom.png"),
   url("../img/index-mountain.jpg");
   background-repeat: no-repeat;
-  background-position: 0 451px, 0 -50px;
+  background-position: 0 451px, 0 -55px;
   background-size: 100% 57px, 100%;
 }
 
 .title {
   margin-left: 506px;
   margin-top: 77px;
-  margin-bottom: 11px;
+  margin-bottom: 4px;
 }
 
 .line  {
   margin-left: 472px;
-  margin-bottom: 55px;
+  margin-bottom: 45px;
 }
 
 .sedona {
   margin-left: 371px;
-  margin-bottom: 56px;
+  margin-bottom: 49px;
 }
 
 .taqline {
@@ -160,7 +164,7 @@ h2 {
   font-weight: bold;
 
   margin: 0 auto;
-  margin-bottom: 33px;
+  margin-bottom: 25px;
 
   text-align: center;
 }
@@ -170,7 +174,7 @@ h2 {
   line-height: 26px;
 
   margin: 0 auto;
-  margin-bottom: 53px;
+  margin-bottom: 52px;
 
   text-align: center;
 }
@@ -180,7 +184,7 @@ h2 {
   background-color: brown;
   background-image: url("../img/index-city.jpg");
   background-repeat: no-repeat;
-  background-position: 400px 0;
+  background-position: 400px -78px;
   background-size: 800px;
 }
 
@@ -197,30 +201,30 @@ h2 {
   width: 155px;
 
   font-size: 21px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight:bold;
 
   margin: 0 auto;
-  padding-top: 45px;
+  padding-top: 52px;
 }
 
 .main-number {
   font-size: 14px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: normal;
 
-  padding-top: 18px;
+  padding-top: 26px;
 }
 
 .main-features {
   width: 285px;
 
   font-size: 14px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: normal;
 
-  padding-top: 18px;
-  padding-bottom: 45px;
+  padding-top: 19px;
+  padding-bottom: 55px;
   margin: 0 auto;
 }
 
@@ -238,7 +242,7 @@ h2 {
   font-weight:bold;
 
   margin: 0 auto;
-  padding-top: 164px;
+  padding-top: 160px;
 
   text-align: center;
   position: relative;
@@ -247,8 +251,9 @@ h2 {
 .info-title::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 52%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
@@ -270,16 +275,20 @@ h2 {
 }
 
 .info-text {
-  width: 255px;
+  width: 300px;
   font-size: 14px;
   line-height: 21px;
   font-weight: normal;
 
   margin: 0 auto;
-  padding-top: 28px;
-  padding-bottom: 85px;
+  padding-top: 25px;
+  padding-bottom: 82px;
 
   text-align: center;
+}
+
+.house-text {
+  width: 280px;
 }
 
 .attractions-main {
@@ -287,7 +296,18 @@ h2 {
   background-color: brown;
   background-image: url("../img/index-devils-bridge.jpg");
   background-repeat: no-repeat;
+  background-position: 0 -75px;
   background-size: 800px;
+}
+
+.main-title-attractions {
+  width: 151px;
+
+  text-align: center;
+}
+
+.main-features-attractions {
+  width: 320px;
 }
 
 .attractions-main-text {
@@ -307,10 +327,17 @@ h2 {
   text-align: center;
 }
 
-.index-booking{
+.main-title-logistics {
+  padding-top: 47px;
+}
 
+.main-features-logistics {
+  width: 275px;
+}
+
+.index-booking{
   background-color: #ffffff;
-  padding-top: 58px;
+  padding-top: 53px;
   text-align: center;
 }
 
@@ -321,8 +348,9 @@ h2 {
   line-height: 30px;
   font-weight: bold;
 
-  margin: 0 auto;
-  margin-bottom: 34px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 27px;
 }
 
 .index-advice {
@@ -333,7 +361,7 @@ h2 {
   font-weight: normal;
 
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 47px;
 }
 
 .index-btn {
@@ -346,7 +374,7 @@ h2 {
   line-height: 26px;
   font-weight: bold;
 
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
 
   color: #ffffff;
@@ -368,26 +396,30 @@ h2 {
   margin-left: 316px;
   background-color: #ffffff;
   z-index: 1;
+  -webkit-animation: bounce 0.5s;
   animation: bounce 0.5s;
 }
 
 .index-form {
-  padding: 55px;
+  padding-top: 58px;
+  padding-bottom: 55px;
+  padding-right: 54px;
+  padding-left: 56px;
 }
 
 .index-form .input-date {
-  width: 314px;
+  width: 309px;
   padding-bottom: 6px;
   padding-top: 6px;
-  padding-left: 6px;
-  padding-right: 25px;
-  margin-bottom: 29px;
+  padding-left: 11px;
+  padding-right: 20px;
+  margin-bottom: 36px;
   border: none;
 
   font-size: 14px;
   font-weight: bold;
   line-height: 1;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 
@@ -414,7 +446,8 @@ h2 {
   z-index: 2;
 
   top: 50%;
-  left: 430px;
+  left: 436px;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
@@ -434,18 +467,18 @@ h2 {
 .index-form .label-date {
   position: relative;
   margin: 0;
-  margin-right: 14px;
+  margin-right: 17px;
 
   font-size: 14px;
   font-weight: bold;
   line-height: 26px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 }
 
 .index-form .check-in {
-  margin-right: 17px;
+  margin-right: 22px;
 }
 
 .index-amount{
@@ -465,7 +498,7 @@ h2 {
   font-size: 14px;
   font-weight: bold;
   line-height: 26px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 }
@@ -483,25 +516,21 @@ h2 {
   font-size: 0;
 }
 
-.div-input-shadow {
-  box-shadow: 0 0 0 3px #f2f2f2;
-}
-
 .index-amount-label-adult {
   width: 105px;
-  margin-right: 5px;
+  margin-right: 6px;
 }
 
 .div-input-adult {
   width: 114px;
-  margin-right: 63px;
+  margin-right: 55px;
 
   background-color: #f2f2f2;
 }
 
 .index-amount-label-child {
   width: 50px;
-  margin-right: 5px;
+  margin-right: 13px;
 }
 
 .div-input-child {
@@ -524,7 +553,7 @@ h2 {
   font-size: 14px;
   font-weight: bold;
   line-height: 26px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 
@@ -535,16 +564,17 @@ h2 {
   display: inline-block;
 
   width:  37px;
-  min-height: 38px;
+  min-height: 30px;
   border: none;
 
-  text-align: center;
-  vertical-align: middle;
+  margin-top: 6px;
 
-  font-size: 30px;
+  text-align: center;
+  vertical-align: top;
+
+  font-size: 26px;
   font-weight: bold;
-  line-height: 30px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: rgba(169, 169, 169, 1);
   text-transform: uppercase;
 
@@ -563,17 +593,17 @@ h2 {
   display: inline-block;
 
   width:  37px;
-  min-height: 38px;
-
+  min-height: 30px;
   border: none;
 
-  text-align: center;
-  vertical-align: middle;
+  margin-top: 6px;
 
-  font-size: 30px;
+  text-align: center;
+  vertical-align: top;
+
+  font-size: 26px;
   font-weight: bold;
-  line-height: 30px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: rgba(169, 169, 169, 1);
   text-transform: uppercase;
 
@@ -591,13 +621,14 @@ h2 {
 .modal-btn {
   width: 100%;
   min-height: 58px;
-  margin-top: 58px;
+
+  margin-top: 52px;
 
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
 
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
 
   color: #ffffff;
@@ -616,16 +647,18 @@ h2 {
 
 .geolocation {
   background-color: beige;
+  background: url("../img/index-map.jpg") center top;
+  background-size: 100% 593px;
 }
 
 .footer {
-  height: 120px;
+  height: 127px;
 
   font-size: 0;
 }
 
 .main-footer {
-  margin-top: -120px;
+  margin-top: -127px;
 }
 
 .foot {
@@ -643,8 +676,8 @@ h2 {
   font-weight: bold;
   line-height: 26px;
 
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding-top: 46px;
+  padding-bottom: 54px;
   text-align: center;
   vertical-align: middle;
 }
@@ -653,7 +686,7 @@ h2 {
   width: 400px;
   font-size: 16px;
 
-  padding-top: 34px;
+  padding-top: 36px;
   padding-bottom: 33px;
 
   text-align: center;
@@ -661,7 +694,7 @@ h2 {
 
 .social-btn {
   display: inline-block;
-  width: 48px;
+  width: 46px;
   height: 48px;
 
   margin-right: 3px;
@@ -704,13 +737,10 @@ h2 {
   line-height: 26px;
 
   padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 28px;
 }
 
 .logo-image {
-  position: relative;
-
-  margin-left: 8px;
   color: #000000;
   text-decoration: none;
 }
@@ -719,8 +749,11 @@ h2 {
   content: "";
   display: inline-block;
 
+  margin-left: -7px;
+
   vertical-align: middle;
   text-align: center;
+
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
   width: 130px;
@@ -740,8 +773,9 @@ h2 {
   display: none;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
   0%   {
+    -webkit-transform: translateY(-100px);
     transform: translateY(-100px);
     opacity: 0;
   }
@@ -749,12 +783,38 @@ h2 {
     opacity: 1;
   }
   70%  {
+    -webkit-transform: translateY(30px);
     transform: translateY(30px);
   }
   90%  {
+    -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
   }
   100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes bounce {
+  0%   {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  70%  {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  90%  {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -764,14 +824,11 @@ h2 {
   color: #766357;
 }
 
-.container-inner{
-  padding-left: 72px;
-  padding-right: 72px;
-}
 .inner-search {
   background-color: #e4f1f9;
   background: url("../img/inner-mountain-blur.jpg") center top;
   background-size: 100%;
+  background-position: 0 -56px;
 }
 
 .inner-checkboxes-infrastructure {
@@ -795,7 +852,7 @@ h2 {
 }
 
 .inner-checkboxes-list li{
-  margin-bottom: 28px;
+  margin-bottom: 21px;
 }
 
 .inner-checkbox{
@@ -807,7 +864,7 @@ h2 {
   font-size: 14px;
   font-weight: normal;
   line-height: 21px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
 }
@@ -842,12 +899,12 @@ h2 {
 
 .inner-content-title {
   padding-top: 29px;
-  margin-bottom: 28px;
+  margin-bottom: 24px;
 
   font-size: 16px;
   font-weight: bold;
   line-height: 21px;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   color: rgba(255, 255, 255, 1);
   text-transform: uppercase;
 }
@@ -856,8 +913,8 @@ h2 {
   float: right;
   width: 330px;
 
-  margin-top: 30px;
-  margin-bottom: 42px;
+  margin-top: 26px;
+  margin-bottom: 32px;
   margin-right: 72px;
 
   color: #ffffff;
@@ -865,6 +922,7 @@ h2 {
 }
 
 .inner-filter-range-title {
+  padding-left: 3px;
   margin-bottom: 9px;
 
   font-weight: bold;
@@ -875,7 +933,10 @@ h2 {
 .inner-price-controls {
   position: relative;
 
-  height: 36px;
+  width: 316px;
+  height: 34px;
+
+  margin-left: 12px;
   margin-bottom: 20px;
 
   font-size: 0;
@@ -890,6 +951,7 @@ h2 {
 
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
   width: 2px;
@@ -914,6 +976,10 @@ h2 {
   padding-left: 65px;
 }
 
+.inner-price-controls .max-price {
+  padding-left: 57px;
+}
+
 .inner-price-controls input {
   width: 50px;
   margin: 0;
@@ -929,13 +995,16 @@ h2 {
 .inner-range-controls {
   position: relative;
 
-  margin-bottom: 32px;
+  width: 318px;
+
+  margin-left: 12px;
 }
 
 .inner-range-controls .scale {
   height: 2px;
 
   background: rgba(255, 255, 255, 0.3);
+  margin-bottom: 34px;
 }
 
 .inner-range-controls .bar {
@@ -974,10 +1043,10 @@ h2 {
 .inner-btn-transparent {
   display: block;
   margin: 0 auto;
-  padding: 6px 35px;
+  padding: 6px 30px;
 
   font-size: 14px;
-  line-height: 20px;
+  line-height: 21px;
   color: #ffffff;
   text-transform: uppercase;
 
@@ -1002,7 +1071,7 @@ h2 {
   font-size: 21px;
   font-weight: bold;
   color: #000000;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
 }
 
@@ -1013,10 +1082,10 @@ h2 {
   font-size: 12px;
   font-weight: normal;
 
-  margin-left: 50px;
+  margin-left: 48px;
   margin-right: 40px;
-  padding-top: 34px;
-  padding-bottom: 34px;
+  padding-top: 36px;
+  padding-bottom: 32px;
 }
 
 .inner-types {
@@ -1026,18 +1095,22 @@ h2 {
   font-size: 12px;
   font-weight: normal;
 
-  padding-top: 34px;
-  padding-bottom: 34px;
+  padding-top: 36px;
+  padding-bottom: 32px;
 }
 
 .types-btn {
   display: inline-block;
 
-  margin-right: 33px;
+  margin-right: 28px;
 
   text-decoration: none;
   color: rgba(204, 204, 205, 1);
   border-bottom: 1px dashed rgba(204, 204, 205, 1);
+}
+
+.types-btn:nth-child(2) {
+  margin-right: 30px;
 }
 
 .types-btn:hover {
@@ -1062,14 +1135,17 @@ h2 {
 .arrows {
   float: right;
 
-  margin-top: 28px;
-  margin-bottom: 28px;
+  margin-top: 32px;
+  margin-bottom: 24px;
 }
 
 a.arrow {
   display: inline-block;
-  margin: 0 5px;
   font-size: 0;
+}
+
+.arrow-down {
+  margin-left: 10px;
 }
 
 .arrow::before {
@@ -1144,8 +1220,20 @@ a.arrow {
   border-bottom-width: 0;
 }
 
+.search-results {
+  padding-left: 72px;
+  padding-right: 72px;
+}
+
 .hotel {
+  padding-left: 72px;
+  padding-right: 72px;
+
   border-top: 1px solid #E5E5E5;
+}
+
+.hotel:nth-child(1) {
+  border-bottom: 1px solid #E5E5E5;
 }
 
 .hotel-img {
@@ -1161,21 +1249,27 @@ a.arrow {
   float: left;
   width: 300px;
 
-  margin-top: 30px;
+  margin-top: 24px;
   margin-bottom: 30px;
+}
+
+.hotel-info-2 {
+  margin-top: 22px;
+}
+
+.hotel-info-3 {
+  margin-top: 22px;
 }
 
 .hotel-info .hotel-name {
   padding: 0;
   margin: 0;
 
-  margin-bottom: 12px;
-
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -1191,16 +1285,20 @@ a.arrow {
 .hotel-info-left {
   float: left;
   width: 110px;
+
+  margin-top: 7px;
   margin-right: 6px;
 }
 
 .hotel-info-right {
   float: left;
   width: 142px;
+
+  margin-top: 7px;
 }
 
 .hotel-info .hotel-type {
-  margin-bottom: 12px;
+  margin-bottom: 13px;
 
   font-size: 14px;
   line-height: 21px;
@@ -1208,25 +1306,41 @@ a.arrow {
 }
 
 .hotel-info .hotel-price {
-  margin-bottom: 12px;
+  margin-bottom: 13px;
 
   font-size: 14px;
   line-height: 21px;
   font-weight: normal;
 }
 
+.hotel-info .hotel-type-2 {
+  margin-bottom: 15px;
+}
+
+.hotel-info .hotel-price-2 {
+  margin-bottom: 15px;
+}
+
+.hotel-info .hotel-type-3 {
+  margin-bottom: 15px;
+}
+
+.hotel-info .hotel-price-3 {
+  margin-bottom: 15px;
+}
+
 .btn-details {
   display: block;
-  width: 98px;
+  width: 95px;
 
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   padding-right: 0;
-  padding-left: 12px;
+  padding-left: 16px;
 
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 14px;
   line-height: 21px;
   color: #ffffff;
@@ -1247,16 +1361,16 @@ a.arrow {
 
 .btn-order {
   display: block;
-  width: 130px;
+  width: 127px;
 
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
   padding-right: 0;
-  padding-left: 12px;
+  padding-left: 16px;
 
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 14px;
   line-height: 21px;
   color: #ffffff;
@@ -1285,15 +1399,15 @@ a.arrow {
 
 .hotel-rating-number {
   position: relative;
-  width: 101px;
+  width: 95px;
 
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   padding-right: 0px;
-  padding-left: 10px;
-  margin-top: 59px;
+  padding-left: 16px;
+  margin-top: 63px;
 
-  font-family: 'PT Sans', "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   text-transform: uppercase;
   font-weight: normal;
   font-size: 14px;
@@ -1327,7 +1441,7 @@ a.arrow {
   width: 65px;
   height: 17px;
   background-position: -10px -875px;
-  }
+}
 
 .two-stars::before {
   content: "";
@@ -1344,6 +1458,3 @@ a.arrow {
 .hotel-last {
   border-bottom: 1px solid #E5E5E5;
 }
-
-
-
